# code_agent

./: .gitignore  .pre-commit-config.yaml  .pre-commit-hooks.yaml  LICENSE  Makefile  README.md  _quarto.yml  constraints.txt  langgraph.json  mkdocs.yml  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  scatter_demo.py
.github/workflows/: ci.yml  docs.yml
code_agent/: README.qmd  __init__.py  __main__.py  cli.py  core.py  docs_generator.py  exceptions.py  file_generator.py  graph.py  main.py  run_agent.py  scaffold.py
code_agent/.github/workflows/: llm-review.yml
code_agent/agents/: __init__.py  base_agent.py  persistent_agent.py
code_agent/ci/: check_output.py  run_agent.py
code_agent/config/: llm_config.json  settings.bash
code_agent/tools/: __init__.py  edit_file_tool.py  format_code_tool.py  general_chat_tool.py  generate_test_tool.py  linker_tool.py  new_file_tool.py  nlp_tool.py  notebook_tool.py  r_tool.py  read_file_tool.py  search_explain_tool.py
code_agent/utils/: __init__.py  diff_utils.py  utils.py
docs/: CODE_AGENT.qmd  FAQ.qmd  FEATURES.qmd  FILES.qmd  README.qmd  TOOLS.qmd  USAGE.qmd
docs/styles/: extra.css
examples/: __init__.py  code_agent_usage.py  demo_verbose.py
pdf_docs/docs/docs_web/: index.html
pdf_docs/docs/docs_web/docs/: AGENT_WORKFLOW.html  AGENT_WORKFLOW.qmd  API.html  API.qmd  CHANGELOG.html  CHANGELOG.qmd  CODE_AGENT.html  CONFIGURATION.html  CONFIGURATION.qmd  CONTRIBUTING.html  CONTRIBUTING.qmd  FAQ.html  FEATURES.html  FILES.html  INSTALLATION.html  INSTALLATION.qmd  QUICKSTART.html  QUICKSTART.qmd  README.qmd  ROADMAP.html  ROADMAP.qmd  TOOLS.html  USAGE.html
pdf_docs/docs/docs_web/docs/styles/: custom.css  dt-wrap.css  quartz-contrast.css
scripts/: build_docs.sh
scripts/structure_tools/: cleanup_scan.py
structure_tools/: archive_candidates.ps1  cleanup_scan.py  filter_cleanup_report.py  generate_archive_candidates.ps1
tests/: test_code_agent.py  test_code_agent_core.py  test_file_generator.py  test_generate_test_tool.py  test_graph.py  test_preview.py  test_scaffold.py
