[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "code-agent"
version = "0.1.0"
description = "Local LLM-driven code assistant for project scaffolding and file operations"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
license-files = ["LICENSE"]
authors = [
    { name = "Sofia Billger Bergström" },
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Operating System :: OS Independent",
]
dependencies = [
    "click>=8.1.7",
    "langchain-core>=0.2.0",
    "langchain-ollama>=0.1.0",
    "typer>=0.9.0",
    "pyyaml>=6.0",
    "rich>=13.5.2",
    "mkdocstrings>=0.30.1",
    "langchain-chroma>=1.0.0",
    "chromadb>=1.3.4",
    "langchain>=1.0.4",
    "langgraph>=0.0.48",
    "gpt4all>=2.2.0", # Added gpt4all
    "pytest>=8.4.2",
    "langchain-community>=0.4.1",
    "nbformat>=5.10.4",
    "matplotlib>=3.10.7",
    "setuptools>=68.0",
    "wheel>=0.45.1",
    "pytest-mock>=3.14.0",
    "isort>=5.13.2",
    "mkdocs-macros-plugin>=0.7.0",
    "mkdocs-gen-files>=0.5.0",
    "mkdocs-include-dir-to-nav>=1.0.0",
    "black>=24.3.0",
    "ruff>=0.4.0",
    "mkdocstrings-python>=0.24.0",
    "jupyterlab-server>=2.28.0",
    "matplotlib-inline>=0.2.1",
    "mkdocs-material>=9.5.2",
    "notebook>=7.4.7",
    "openai>=2.7.1",
    "pandas>=2.3.3",
    "mkdocs-section-index>=0.3.1",
    "pandas-stubs==2.3.2.250926",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["code_agent"]
namespaces = false


[project.optional-dependencies]
notebook = [
    "nbformat>=5.10.0",
]
dev = [
    "ruff>=0.4.0",
    "black>=24.3.0",
    "isort>=5.13.2",
    "pytest>=8.2.0",
    "pytest-mock>=3.14.0",
]
docs = [
    "mkdocs>=1.5.3",
    "mkdocs-material>=9.5.2",
    "mkdocs-macros-plugin>=0.7.0",
    "mkdocstrings>=0.24.0",
    "mkdocstrings-python>=0.24.0",
    "mkdocs-autorefs>=0.4.1",
    "mkdocs-gen-files>=0.5.0",
    "mkdocs-section-index>=0.3.1",
    "mkdocs-include-dir-to-nav>=1.0.0",
]

[project.scripts]
code-agent = "code_agent.cli:main"

[tool.black]
line-length = 79
target-version = ["py310", "py311", "py312", "py313"]

[tool.isort]
profile = "black"
line_length = 88

[tool.mypy]
python_version = 3.13
check_untyped_defs = true
ignore_missing_imports = true

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
docstring-code-format = true
line-ending = "lf"
docstring-code-line-length = 60

# Like Black, respect magic trailing commas.
skip-magic-trailing-comma = false


[tool.ruff.lint.per-file-ignores]
"*.ipynb" = ["T20"]

[tool.uv.workspace]
members = [
    ".",
    ".",
]

[tool.uv.sources]
code-agent = { workspace = true }

[dependency-groups]
dev = [
    "code-agent",
]

[tool.ruff.analyze]
detect-string-imports = true

[tool.ruff.lint]
# Enable Pyflakes (`F`) and a subset of the pycodestyle (`E`) codes by default.
# Unlike Flake8, Ruff doesn't enable pycodestyle warnings (`W`) or
# McCabe complexity (`C901`) by default.
select = ["E", "F", "W", "C90", "I", "N", "UP"]
ignore = ["E501"]  # line length is handled by black

# Allow fix for all enabled rules (when `--fix`) is provided.
fixable = ["ALL"]
unfixable = []

# Allow unused variables when underscore-prefixed.
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))"
